# OkHTTP

./: .gitignore  .npmignore  ANDROID_BUILD.md  ARCHITECTURE_CLARIFICATION.md  BUILD_STATUS.md  COMPATIBILITY.md  CRYPTO_USAGE.md  CUSTOM_HTTP_EXAMPLE.js  FINAL_IMPLEMENTATION.md  FIXED_HTTP_CLIENT.js  FIXES_APPLIED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_MAP.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  INTEGRATION_GUIDE.md  INTERCEPTOR_FIX.md  JNI_FIX_APPLIED.md  MIGRATION_GUIDE.md  MITM_PREVENTION.md  MONITORING.md  MONITORING_EXAMPLES.js  NETWORK_STRENGTH_ENHANCEMENT.md  NETWORK_STRENGTH_EXAMPLE.js  NETWORK_STRENGTH_SUMMARY.md  OPTIMIZED_HTTP_CLIENT.js  PROFESSIONAL_IMPLEMENTATION_COMPLETE.md  QUICK_INTEGRATION_GUIDE.md  QUICK_START_SINGLETON.md  README.md  REBUILD_INSTRUCTIONS.md  REPLACE_YOUR_HTTP_CLIENT.js  RUST_HTTP_EXAMPLES.js  RUST_HTTP_PERFORMANCE.md  SAFE_HTTP_CLIENT.js  SECURE_STORAGE.md  SECURITY_EXPLAINED.md  SETUP_COMPLETE.md  SINGLETON_ARCHITECTURE.md  SYMBOL_BASED_SINGLETON.md  (+6 more)
android/: build.gradle
rust-crypto/: Cargo.toml  FRAUD_PREVENTION.md  README.md
rust-crypto/.cargo/: config.toml
rust-crypto/src/: http_client.rs  lib.rs
scripts/: build-android.sh  check-16kb-alignment.py
src/: CryptoUtils.js  EnhancedHttpClient.js  NetworkOptimizer.js  RustHttpClient.js  SecureHttpClient.js  SecureStorage.js  SecurityValidator.js  index.d.ts  index.js
src/android/: CMakeLists.txt  SecureHttpCryptoModule.kt  SecurityModule.kt  build.gradle
src/android/src/main/: AndroidManifest.xml
src/android/src/main/cpp/: jni_bridge.cpp
src/android/src/main/java/com/securehttp/: SecureHttpCryptoModule.kt  SecureHttpPackage.kt  TLSOkHttpClientFactory.kt  TLSSecurityModule.kt  TlsProviderSupport.kt
src/ios/: SecureHttpCrypto.m  SecureHttpCrypto.swift  SecureHttpModule.m  SecureHttpModule.swift  SecurityModule.m  SecurityModule.swift  secure_http_crypto.h
src/monitoring/: PerformanceMonitor.js  ScreenshotCapture.js  TelemetryClient.js  index.js
